--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ nav ul li a {
     justify-content: space-between;
     padding: 50px 10%;
     background: #dbeafe;
+    height: 80vh;
 }
 
 .hero-content {
@@ -115,9 +116,18 @@ nav ul li a {
     font-size: 18px;
 }
 
-.hero-image img {
-    max-width: 400px;
+/*hero image*/
+.hero-image {
+    max-width:50%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
+.hero-image img{
+    max-width: 100%;
+    height: auto;
+}
+    
 
 
 /* Responsive Styles for Hero Section */
